--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-body {
-
-	margin-top: 150px;
-}
-
-
 .container {
       text-align: center;
       width: 400px;
@@ -16,3 +10,10 @@ body {
 
 }
 
+.equipment {
+	width: 100px;
+}
+
+a {
+	color: black; 
+}
