--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-.container {
+#logInForm {
       text-align: center;
       width: 400px;
-      }
+      margin-top: 100px;
+}
 
 .message {
 
@@ -14,6 +15,6 @@
 	width: 100px;
 }
 
-a {
-	color: black; 
+body {
+  background-color: red;
 }
